# mbed-os

targets/: targets.json
targets/TARGET_STM/: mbed_overrides.c
targets/TARGET_STM/TARGET_STM32L5/: flash_api.c  system_clock.c
targets/TARGET_STM/TARGET_STM32L5/TARGET_STM32L552xE/: cmsis_nvic.h
targets/TARGET_STM/TARGET_STM32L5/TARGET_STM32L552xE/TARGET_NUCLEO_L552ZE_Q/: CMakeLists.txt
targets/TARGET_STM/TARGET_STM32L5/TARGET_STM32L552xE/TARGET_NUCLEO_L552ZE_Q/COMPONENT_TFM_S_FW/: tfm_s.axf
targets/TARGET_STM/TARGET_STM32L5/TARGET_STM32L552xE/TARGET_NUCLEO_L552ZE_Q/COMPONENT_TFM_S_FW/partition/: signing_layout_ns.c  signing_layout_s.c
targets/TARGET_STM/TARGET_STM32L5/TARGET_STM32L552xE/TARGET_NUCLEO_L552ZE_Q/TFM_S_FW/: TFM_UPDATE.sh  regression.sh  tfm_s.hex
targets/TARGET_STM/TARGET_STM32L5/TARGET_STM32L552xE/TOOLCHAIN_GCC_ARM/: stm32l552xe.ld
tools/targets/: __init__.py
tools/targets/STM32/STM32L5/STL32L552xE/: NUCLEO_L552ZE_Q.py
tools/targets/STM32/STM32L5/STM32L552xE/: NUCLEO_L552ZE_Q.py  root-rsa-3072.md
